# ORBIT_MSEOR

./: AGENTS.md  LICENSE  MIGRATE.md  README.md  README_CN.md  pyproject.toml
scripts/: aggregate_orq_predictions.py  evaluate_or_mse_fixtures.py  evaluate_orq_dataset.py  generate_log.py  run_nl4opt_minimax_batch.py  run_orq_minimax_batch.py
src/orbit_or/: agents.py  analytics.py  api.py  api_throttle.py  broker.py  canonical.py  code_sandbox.py  corpus.py  db.py  domain_ontology.py  domain_profiles.py  embedding.py  evaluation.py  evidence_parser.py  fact_daemon.py  fact_dedup.py  formal_claims.py  graph.py  json_utils.py  jtms.py  ledger.py  librarian_processor.py  llm_router.py  logging_utils.py  master_graph.py  minimax_client.py  optimization.py  problem_profile.py  prompts.py  (+12 more)
tests/: conftest.py  test_agents.py  test_api.py  test_broker.py  test_circuit_breaker.py  test_claim_tournament.py  test_claim_v2.py  test_code_sandbox.py  test_corpus.py  test_db.py  test_domain_ontology.py  test_e2e.py  test_embedding.py  test_evaluation.py  test_evidence_parser.py  test_fact_daemon.py  test_fact_dedup.py  test_generate_log.py  test_graph.py  test_hitl.py  test_jtms.py  test_ledger.py  test_ledger_dedup.py  test_ledger_phase2.py  test_librarian_processor.py  test_llm_router.py  test_master_graph.py  test_minimax.py  test_optimization.py  test_optimization_normalization.py  test_orq_batch_routing.py  test_orq_batch_runner.py  test_orq_experiment_scripts.py  test_phase_a.py  test_phase_d.py  test_rag.py  test_report.py  test_rerank.py  test_scope_and_gaps.py  test_server.py  (+7 more)
(+3 files in other folders)
