[project]
name = "orbit-or"
version = "0.2.0"
description = "ORBIT: Optimization and Operations Research Bridge for Intelligent Tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "cryptography>=46.0.5",
    "einops>=0.8.2",
    "httpx>=0.28.1",
    "langchain-core>=1.2.17",
    "langgraph>=1.0.10",
    "mistune>=3.2.0",
    "nh3>=0.3.3",
    "posthog>=7.14.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "ruff>=0.15.5",
    "safehttpx>=0.1.7",
    "sentence-transformers>=5.2.3",
    "sqlite-vec>=0.1.6",
    "torch>=2.10.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_or"]

[tool.pytest.ini_options]
testpaths = ["tests"]
